the text of the introduction has been changed

--- a/en.html
+++ b/en.html
@@ -63,10 +63,10 @@
             <i class="fas fa-handshake"></i> Open to offers
           </h2>
           <div class="introduction">
-            Unity Developer with 2 years of experience and 6+ published
-            projects. Expertise in full-cycle game development from concept to
-            store publication. Seeking remote or hybrid position. Available for
-            both full-time and contract work.
+            Unity Developer with 2 years of experience and 6+ independently
+            released projects. Expertise in end-to-end development from concept
+            to store publication. Seeking remote or hybrid position. Available
+            for full-time and contract work.
           </div>
         </div>
         <!-- Опыт работы -->
