--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           </h2>
           <div class="introduction">
             <p>
-              Unity Developer с 2-летним опытом и 6+ опубликованными проектами.
-              Специализируюсь на полном цикле разработки - от идеи до
+              Unity Developer с 2-летним опытом и 6+ выпущенными сольными
+              проектами. Специализируюсь на полном цикле разработки - от идеи до
               публикации. Ищу удаленную или гибридную работу. Открыт к
               постоянной и проектной занятости.
             </p>
