Added description of work tasks and minor edits

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </h2>
           <div class="introduction">
             <p>
-              Unity Developer с 2-летним опытом и 6+ выпущенными сольными
+              Unity Developer с 2-летним опытом работы и 6+ выпущенными сольными
               проектами. Специализируюсь на полном цикле разработки - от идеи до
               публикации. Ищу удаленную или гибридную работу. Открыт к
               постоянной и проектной занятости.
@@ -79,6 +79,18 @@
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
             <div class="period">04/2024-08/2025</div>
+            <p>
+<ul style="margin: 0; padding-left: 20px;">
+<li>Разработка игровых механик на C#</li>
+<li>Оптимизация производительности для мобильных платформ (Android/iOS) и PC</li>
+<li>Создание, реализация и адаптация UI/UX интерфейсов</li>
+<li>Интеграция сторонних SDK (реклама, аналитика, платежи)</li>
+<li>Исправление ошибок и техническая поддержка выпущенных проектов</li>
+<li>Эффективное взаимодействие с гейм-дизайнерами и художниками в команде</li>
+<li>Полный цикл разработки от концепции до публикации</li>
+<li>Написание чистого, поддерживаемого кода с применением принципов SOLID и шаблонов проектирования</li>
+</ul>
+</p>
           </div>
         </div>
         <!-- Навыки -->
