--- a/en.html
+++ b/en.html
@@ -77,6 +77,18 @@
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
             <div class="period">04/2024-08/2025</div>
+			<p>
+<ul style="margin: 0; padding-left: 20px;">
+<li>Developed game mechanics using C#</li>
+<li>Optimized performance for mobile platforms (Android/iOS) and PC</li>
+<li>Created, implemented and adapted UI/UX interfaces</li>
+<li>Integrated third-party SDKs (advertising, analytics, payments)</li>
+<li>Performed bug fixing and technical support for released projects</li>
+<li>Effectively collaborated with game designers and artists in a team environment</li>
+<li>Full development cycle from concept to publication</li>
+<li>Wrote clean, maintainable code using SOLID principles and design patterns</li>
+</ul>
+</p>
           </div>
         </div>
         <!-- Навыки -->
