--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
   <body>
     <div class="container">
+      <div class="language-switcher">
+        <a href="index.html" class="lang-btn active" title="Русский">
+          <span class="flag-icon">🇷🇺</span>
+          <span class="lang-text">RU</span>
+        </a>
+        <a href="en" class="lang-btn" title="English">
+          <span class="flag-icon">🇺🇸</span>
+          <span class="lang-text">EN</span>
+        </a>
+      </div>
       <div class="resume">
         <!-- Шапка -->
         <div class="header">
@@ -79,18 +89,27 @@
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
             <div class="period">04/2024-08/2025</div>
-            <p>
-<ul style="margin: 0; padding-left: 20px;">
-<li>Разработка игровых механик на C#</li>
-<li>Оптимизация производительности для мобильных платформ (Android/iOS) и PC</li>
-<li>Создание, реализация и адаптация UI/UX интерфейсов</li>
-<li>Интеграция сторонних SDK (реклама, аналитика, платежи)</li>
-<li>Исправление ошибок и техническая поддержка выпущенных проектов</li>
-<li>Эффективное взаимодействие с гейм-дизайнерами и художниками в команде</li>
-<li>Полный цикл разработки от концепции до публикации</li>
-<li>Написание чистого, поддерживаемого кода с применением принципов SOLID и шаблонов проектирования</li>
-</ul>
-</p>
+            <ul style="margin: 0; padding-left: 20px">
+              <li>Разработка игровых механик на C#</li>
+              <li>
+                Оптимизация производительности для мобильных платформ
+                (Android/iOS) и PC
+              </li>
+              <li>Создание, реализация и адаптация UI/UX интерфейсов</li>
+              <li>Интеграция сторонних SDK (реклама, аналитика, платежи)</li>
+              <li>
+                Исправление ошибок и техническая поддержка выпущенных проектов
+              </li>
+              <li>
+                Эффективное взаимодействие с гейм-дизайнерами и художниками в
+                команде
+              </li>
+              <li>Полный цикл разработки от концепции до публикации</li>
+              <li>
+                Написание чистого, поддерживаемого кода с применением принципов
+                SOLID и шаблонов проектирования
+              </li>
+            </ul>
           </div>
         </div>
         <!-- Навыки -->
