--- a/en.html
+++ b/en.html
@@ -20,7 +20,7 @@
           <span class="flag-icon">🇷🇺</span>
           <span class="lang-text">RU</span>
         </a>
-        <a href="en/index.html" class="lang-btn" title="English">
+        <a href="en" class="lang-btn" title="English">
           <span class="flag-icon">🇺🇸</span>
           <span class="lang-text">EN</span>
         </a>
