--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
   <body>
     <div class="container">
       <div class="language-switcher">
-        <a href="index.html" class="lang-btn active" title="Русский">
-          <span class="flag-icon">🇷🇺</span>
-          <span class="lang-text">RU</span>
+        <a href="index.html" class="lang-btn" title="Русский">
+          <i class="fas fa-flag"></i>
         </a>
         <a href="en" class="lang-btn" title="English">
-          <span class="flag-icon">🇺🇸</span>
-          <span class="lang-text">EN</span>
+          <i class="fas fa-flag-usa"></i>
         </a>
       </div>
       <div class="resume">
