--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
       <div class="language-switcher">
         <a href="index.html" class="lang-btn" title="Русский">
-          <i class="fas fa-flag"></i>
+          <span class="flag-icon">🇷🇺</span>
         </a>
         <a href="en" class="lang-btn" title="English">
-          <i class="fas fa-flag-usa"></i>
+          <span class="flag-icon">🇺🇸</span>
         </a>
       </div>
       <div class="resume">
