--- a/en.html
+++ b/en.html
@@ -85,7 +85,7 @@
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
             <div class="period">04/2024-08/2025</div>
-            <ul style="margin: 0; padding-left: 20px">
+            <ul style="margin: 0; padding-left: 20px; margin-bottom: 0">
               <li>Developed game mechanics using C#</li>
               <li>
                 Optimized performance for mobile platforms (Android/iOS) and PC
