--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
             <div class="period">04/2024-08/2025</div>
-            <ul style="margin: 0; padding-left: 20px">
+            <ul style="margin: 0; padding-left: 20px; margin-bottom: 0">
               <li>Разработка игровых механик на C#</li>
               <li>
                 Оптимизация производительности для мобильных платформ
