--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
       <div class="language-switcher">
         <a href="index.html" class="lang-btn" title="Русский">
-          <span class="flag-icon">🇷🇺</span>
+          <img src="images/flagRU.png" alt="Русский" width="20" height="15" />
         </a>
         <a href="en" class="lang-btn" title="English">
-          <span class="flag-icon">🇺🇸</span>
+          <img src="images/flagUS.png" alt="English" width="20" height="15" />
         </a>
       </div>
       <div class="resume">
